# ai-operations-case-manager

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
configs/: health_authorization.yaml
examples/: solicitacao_sintetica.md
skills/case-triage/: SKILL.md
src/case_manager/: __init__.py  agent.py  api.py  config.py  ingestion.py  models.py  provider.py  repository.py  rules.py  service.py
src/case_manager/static/: app.js  index.html  styles.css
tests/: test_api.py  test_rules.py  test_service.py
