[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-operations-case-manager"
version = "0.1.0"
description = "Auditable AI-assisted operations case management"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.5,<3",
  "python-multipart>=0.0.12,<1",
  "PyMuPDF>=1.24,<2",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.8,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
case_manager = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=case_manager --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]
